# deep-web-research-mcp

./: LICENSE  README.md  build_instructions.md  deep_research_client.py  pyproject.toml  server.py
scripts/: install_local.sh  run_server_ready.sh
tests/: test_client.py  test_server.py  test_setup_scripts.py
