[project]
name = "deep-web-research-mcp"
version = "0.1.0"
description = "FastMCP server for deep web research via SearXNG, Trafilatura, and BM25 ranking."
readme = "build_instructions.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "httpx>=0.28.1",
  "mcp>=1.26.0",
  "rank-bm25>=0.2.2",
  "trafilatura>=2.0.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
